updated ciena expirence

--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
         </section>
 
         <section id="experience" class="doc-section">
-            <h2 class="section-title">What I've learned and where I've been.</h2>
+            <div class="section-header-row">
+                <h2 class="section-title" style="margin-bottom:0;">What I've learned and where I've been.</h2>
+                <span class="section-hint">(click each role to learn more)</span>
+            </div>
 
             <div class="exp-list">
                 <!-- Ciena Experience Card (Nested Roles) -->
@@ -73,45 +76,44 @@
 
                         <!-- Nested Roles Timeline -->
                         <div class="nested-roles">
-                            <!-- Software Engineer Intern -->
-                            <div class="role-item" data-modal-title="Software Engineer Intern"
+                            <!-- AI Software Engineer Intern -->
+                            <div class="role-item" data-modal-title="AI Software Engineer Intern"
                                 data-modal-company="Ciena" data-modal-dates="May 2025 - Present"
-                                data-modal-bullets="Evaluated LLM code generation metrics and presented findings to VP-leadership to guide AI roadmaps.||Engineered a multi-threaded Python tool to identify 5,000+ dead functions in large-scale codebases.||Automated Jenkins CI/CD checks and resolved Protocol Buffer errors for stable Agile deployments.||Boosted Core Library test coverage by 20% across 50k+ lines using automated unit test tools.">
+                                data-modal-bullets="Connect to stay updated!">
                                 <div class="role-bg"
                                     style="background-image: url('./assets/Expirences/TempBanner.png'); background-position: right 20%; background-size: 55%;">
                                 </div>
                                 <div class="role-header">
-                                    <h4>Software Engineer Intern</h4>
+                                    <h4>AI Software Engineer Intern</h4>
                                     <span class="role-date">Incoming May 2026</span>
                                 </div>
-                                <p class="role-summary">Evaluated LLM metrics and engineered multi-threaded tools for
-                                    large-scale codebases.</p>
+                                <p class="role-summary">Excited to join Ciena's AI team to make the internet go brrr</p>
                                 <div class="role-tech-stack">
                                     <div class="tech-stack">
                                         <span class="tech-tag">Python</span>
-                                        <span class="tech-tag">LLMs</span>
+                                        <span class="tech-tag">TensorFlow</span>
+                                        <span class="tech-tag">PyTorch</span>
+                                        <span class="tech-tag">Scikit-learn</span>
                                     </div>
                                 </div>
                             </div>
 
-                            <!-- Applied ML Intern -->
-                            <div class="role-item" data-modal-title="Applied Machine Learning Engineering Intern"
+                            <!-- SWE Intern -->
+                            <div class="role-item" data-modal-title="Software Engineer Intern"
                                 data-modal-company="Ciena" data-modal-dates="Jan 2025 - Sep 2025"
-                                data-modal-bullets="Developed and deployed machine learning models to optimize network traffic routing, achieving a 15% reduction in latency.||Collaborated with cross-functional teams to integrate AI-driven telemetry analysis into core product offerings.||Implemented data pipelines using Apache Spark and Airflow to process terabytes of network logs daily.">
+                                data-modal-bullets="Working hard">
                                 <div class="role-bg"
                                     style="background-image: url('./assets/Expirences/CienaBanner2.jpg'); background-position: right 20%; background-size: 55%;">
                                 </div>
                                 <div class="role-header">
-                                    <h4>Applied Machine Learning Engineering Intern</h4>
+                                    <h4>Software Engineer Intern</h4>
                                     <span class="role-date">Sep 2025 - Present</span>
                                 </div>
-                                <p class="role-summary">Developed machine learning models and Apache Spark data
-                                    pipelines to optimize network traffic routing.</p>
+                                <p class="role-summary">Streamlining network workflows with automated RLS deployments
+                                    and LLM code reviews</p>
                                 <div class="role-tech-stack">
                                     <div class="tech-stack">
-                                        <span class="tech-tag">Apache Spark</span>
-                                        <span class="tech-tag">Airflow</span>
-                                        <span class="tech-tag">Machine Learning</span>
+                                        <span class="tech-tag">Follow my journey to find out!</span>
                                     </div>
                                 </div>
                             </div>
@@ -119,7 +121,7 @@
                             <!-- Backend Intern -->
                             <div class="role-item" data-modal-title="Software Engineer and Tools Developer Intern"
                                 data-modal-company="Ciena" data-modal-dates="May 2024 - Jan 2025"
-                                data-modal-bullets="Overhauled the entire API Deprecation Streaming Pipeline. Achieved a better API Breaking Changes Data flow.||Optimized RESTful microservices reducing average response time by 30%.||Participated in agile ceremonies and contributed to technical design documentation.">
+                                data-modal-bullets="Evaluated LLM code generation metrics and presented findings to VP-leadership to guide AI roadmaps.||Engineered a multi-threaded Python tool to identify 5,000+ dead functions in large-scale codebases.||Automated Jenkins CI/CD checks and resolved Protocol Buffer errors for stable Agile deployments.||Boosted Core Library test coverage by 20% across 50k+ lines using automated unit test tools.">
                                 <div class="role-bg"
                                     style="background-image: url('./assets/Expirences/CienaBanner.png'); background-position: right 25%; background-size: 55%;">
                                 </div>
@@ -127,7 +129,8 @@
                                     <h4>Software Engineer and Tools Developer Intern</h4>
                                     <span class="role-date">May 2025 - Aug 2025</span>
                                 </div>
-                                <p class="role-summary">Created dead-code detection tools and evaluated LLM generation metrics</p>
+                                <p class="role-summary">Optimizing global telecom infrastructure via dead-code
+                                    automation and LLM evaluation.</p>
                                 <div class="role-tech-stack">
                                     <div class="tech-stack">
                                         <span class="tech-tag">RESTful APIs</span>
@@ -142,10 +145,42 @@
                 </div>
             </div>
 
+            <!-- CU in Space Experience Card -->
+            <div class="exp-card" data-modal-title="AI Software Engineer" data-modal-company="CU in Space"
+                data-modal-dates="Jan 2026 - Present"
+                data-modal-bullets="Engineering a Hybrid Search Engine by initializing a vector database and implementing keyword and semantic search to ensure accurate document retrieval. || Designing AI Logic and Safety Layers to create Confidence Gate thresholds and automated citation systems that prevent hallucinations in technical rocketry data.">
+                <!-- Placeholder background (can use solid color or another image if preferred) -->
+                <div class="exp-bg"
+                    style="background-color: #f1f1f1; background-position: right 20%; background-size: cover;">
+                </div>
+
+                <div class="exp-content">
+                    <div class="exp-header">
+                        <div class="exp-logo">
+                            <img src="./assets/Expirences/CUinSpace.png" alt="CU in Space Logo" class="company-logo">
+                        </div>
+                        <div class="exp-titles">
+                            <div class="exp-title-row">
+                                <h3>AI Software Engineer</h3>
+                                <span class="exp-date">Jan 2026 - Present</span>
+                            </div>
+                            <p>CU in Space</p>
+                        </div>
+                    </div>
+
+                    <div class="exp-details">
+                        <div class="tech-stack">
+                            <span class="tech-tag">Python</span>
+                            <span class="tech-tag">Machine Learning</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <!-- Shopify Experience Card -->
             <div class="exp-card" data-modal-title="Active Member" data-modal-company="Shopify Builder Sunday"
                 data-modal-dates="Jan 2026 - Present"
-                data-modal-bullets="Led organizing efforts for Shopify Builder Sunday's new Ottawa Chapter.||Facilitated technical workshops and networking events for local developers and entrepreneurs.||Collaborated with industry partners to secure sponsorships and venue spaces.">
+                data-modal-bullets="Initiated the expansion of Builder Sundays to Ottawa by identifying a gap in the local tech scene and mobilizing a community of 50+ developers and founders.">
                 <!-- Placeholder background (can use solid color or another image if preferred) -->
                 <div class="exp-bg"
                     style="background-color: #f1f1f1; background-position: right 20%; background-size: cover;">
@@ -210,8 +245,8 @@
             </div>
 
             <!-- Example Card 2 -->
-            <div class="exp-card" data-modal-title="Founding Technical Instructor"
-                data-modal-company="Dovercourt Recreation Centre (Non-Profit)" data-modal-dates="Jan 2024 – Jun 2024"
+            <div class="exp-card" data-modal-title="Coding Bootcamp Founder"
+                data-modal-company="Dovercourt Recreation Centre" data-modal-dates="Jan 2024 – Jun 2024"
                 data-modal-bullets="Designed a 20-week Python curriculum covering Recursion and Big-O notation for 25+ youth students.||Founded and launched a youth coding program to provide accessible technical education within the community.||Mentored 25+ students in computational thinking and foundational programming through hands-on Python labs.">
                 <div class="exp-bg"
                     style="background-image: url('./assets/Expirences/DCRbanner.png'); background-position: right 40%; background-size: 60%;">
@@ -225,7 +260,7 @@
                         </div>
                         <div class="exp-titles">
                             <div class="exp-title-row">
-                                <h3>Founding Technical Instructor</h3>
+                                <h3>Coding Bootcamp Founder</h3>
                                 <span class="exp-date">Jan 2024 – Jun 2024</span>
                             </div>
                             <p>Dovercourt Recreation Centre (Non-Profit)</p>
@@ -262,8 +297,8 @@
                             <h3>Amplify</h3>
                             <img src="./assets/Icons/github.png" alt="GitHub Repository" class="project-icon">
                         </div>
-                        <p class="project-desc">A platform that integrates Git with real-time incident responses and
-                            analytics.</p>
+                        <p class="project-desc">E-commerce AI dynamically updating UIs in real-time to boost conversion.
+                        </p>
                         <div class="tech-stack">
                             <span class="tech-tag">React</span>
                             <span class="tech-tag">Node.js</span>
@@ -285,8 +320,7 @@
                             <h3>TutorLink</h3>
                             <img src="./assets/Icons/github.png" alt="GitHub Repository" class="project-icon">
                         </div>
-                        <p class="project-desc">A peer‑to‑peer tutoring platform connecting university students with
-                            top-performing tutors from their own campus.</p>
+                        <p class="project-desc">A peer‑to‑peer tutoring platform connecting students with tutors.</p>
                         <div class="tech-stack">
                             <span class="tech-tag">React</span>
                             <span class="tech-tag">TypeScript</span>
