added CuinSpace Banner

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                 data-modal-company="Ciena" data-modal-dates="May 2025 - Present"
                                 data-modal-bullets="Connect to stay updated!">
                                 <div class="role-bg"
-                                    style="background-image: url('./assets/Expirences/TempBanner.png'); background-position: right 20%; background-size: 55%;">
+                                    style="background-image: url('./assets/Expirences/TempBanner.png'); background-position: right 50%; background-size: 55%;">
                                 </div>
                                 <div class="role-header">
                                     <h4>AI Software Engineer Intern</h4>
@@ -149,9 +149,8 @@
             <div class="exp-card" data-modal-title="AI Software Engineer" data-modal-company="CU in Space"
                 data-modal-dates="Jan 2026 - Present"
                 data-modal-bullets="Engineering a Hybrid Search Engine by initializing a vector database and implementing keyword and semantic search to ensure accurate document retrieval. || Designing AI Logic and Safety Layers to create Confidence Gate thresholds and automated citation systems that prevent hallucinations in technical rocketry data.">
-                <!-- Placeholder background (can use solid color or another image if preferred) -->
                 <div class="exp-bg"
-                    style="background-color: #f1f1f1; background-position: right 20%; background-size: cover;">
+                    style="background-image: url('./assets/Expirences/CuinSpaceBanner.jpg'); background-position: right 20%; background-size: cover;">
                 </div>
 
                 <div class="exp-content">
@@ -282,7 +281,7 @@
         </section>
 
         <section id="projects" class="doc-section">
-            <h2 class="section-title">Projects</h2>
+            <h2 class="section-title">I like building things</h2>
             <div class="projects-grid">
                 <!-- Amplify Project -->
                 <a href="https://github.com/clam433/githappens" target="_blank" rel="noopener noreferrer"
