reduced virticle gaps

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 
         <section id="projects" class="doc-section">
             <div class="section-header-row">
-                <h2 class="section-title" style="margin-bottom:0;">I like building things</h2>
+                <h2 class="section-title" style="margin-bottom:0;">What I've been building </h2>
             </div>
             <p class="intro-text" style="font-size: 1rem; margin-bottom: 2rem;">
                 I’ve competed in 10+ hackathons, teaming up with other builders to ship projects in under 36 hours. It’s where I’ve done some of my favorite work, here are a few highlights:
