--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     onclick="window.open('https://github.com/Aaryan-Biradar', '_blank')" />
                 <img src="./assets/Icons/email.png" alt="My Email" class="icon email-icon"
                     onclick="location.href='mailto:aaryan.biradar@example.com'" />
-                <img src="./assets/Icons/CVicon.png" alt="My Resume/CV" class="icon"
+                <img src="./assets/Icons/CVIcon.png" alt="My Resume/CV" class="icon"
                     onclick="window.open('./assets/Aaryan_Biradar_Resume.pdf', '_blank')" />
             </div>
         </section>
@@ -349,7 +349,7 @@
                     <img src="./assets/Icons/email.png" alt="Email" class="footer-icon">
                 </a>
                 <a href="./assets/Aaryan_Biradar_Resume.pdf" target="_blank" rel="noopener noreferrer">
-                    <img src="./assets/Icons/CVicon.png" alt="CV Document" class="footer-icon">
+                    <img src="./assets/Icons/CVIcon.png" alt="CV Document" class="footer-icon">
                 </a>
             </div>
         </footer>
