added expanded tech stack to modals

--- a/index.html
+++ b/index.html
@@ -90,10 +90,7 @@
                                 <p class="role-summary">Excited to join Ciena's AI team to make the internet go brrr</p>
                                 <div class="role-tech-stack">
                                     <div class="tech-stack">
-                                        <span class="tech-tag">Python</span>
-                                        <span class="tech-tag">TensorFlow</span>
-                                        <span class="tech-tag">PyTorch</span>
-                                        <span class="tech-tag">Scikit-learn</span>
+                                        <span class="tech-tag">Follow my journey to find out!</span>
                                     </div>
                                 </div>
                             </div>
@@ -121,7 +118,8 @@
                             <!-- Backend Intern -->
                             <div class="role-item" data-modal-title="Software Engineer and Tools Developer Intern"
                                 data-modal-company="Ciena" data-modal-dates="May 2024 - Jan 2025"
-                                data-modal-bullets="Evaluated LLM code generation metrics and presented findings to VP-leadership to guide AI roadmaps.||Engineered a multi-threaded Python tool to identify 5,000+ dead functions in large-scale codebases.||Automated Jenkins CI/CD checks and resolved Protocol Buffer errors for stable Agile deployments.||Boosted Core Library test coverage by 20% across 50k+ lines using automated unit test tools.">
+                                data-modal-bullets="Evaluated LLM code generation metrics and presented findings to VP-leadership to guide AI roadmaps.||Engineered a multi-threaded Python tool to identify 5,000+ dead functions in large-scale codebases.||Automated Jenkins CI/CD checks and resolved Protocol Buffer errors for stable Agile deployments.||Boosted Core Library test coverage by 20% across 50k+ lines using automated unit test tools."
+                                data-modal-tech="Python||C++||RESTful APIs||Microservices||Agile||Jenkins CI/CD||Git||Protocol Buffers">
                                 <div class="role-bg"
                                     style="background-image: url('./assets/Expirences/CienaBanner.png'); background-position: right 25%; background-size: 55%;">
                                 </div>
@@ -148,7 +146,8 @@
             <!-- CU in Space Experience Card -->
             <div class="exp-card" data-modal-title="AI Software Engineer" data-modal-company="CU in Space"
                 data-modal-dates="Jan 2026 - Present"
-                data-modal-bullets="Engineering a Hybrid Search Engine by initializing a vector database and implementing keyword and semantic search to ensure accurate document retrieval. || Designing AI Logic and Safety Layers to create Confidence Gate thresholds and automated citation systems that prevent hallucinations in technical rocketry data.">
+                data-modal-bullets="Engineering a Hybrid Search Engine by initializing a vector database and implementing keyword and semantic search to ensure accurate document retrieval. || Designing AI Logic and Safety Layers to create Confidence Gate thresholds and automated citation systems that prevent hallucinations in technical rocketry data."
+                data-modal-tech="Python||Machine Learning||Vector Databases||RAG||Semantic Search">
                 <div class="exp-bg"
                     style="background-image: url('./assets/Expirences/CuinSpaceBanner.jpg'); background-position: right 20%; background-size: cover;">
                 </div>
@@ -285,7 +284,8 @@
                 <h2 class="section-title" style="margin-bottom:0;">What I've been building </h2>
             </div>
             <p class="intro-text" style="font-size: 1rem; margin-bottom: 2rem;">
-                I’ve competed in 10+ hackathons, teaming up with other builders to ship projects in under 36 hours. It’s where I’ve done some of my favorite work, here are a few highlights:
+                I’ve competed in 10+ hackathons, teaming up with other builders to ship projects in under 36 hours. It’s
+                where I’ve done some of my favorite work, here are a few highlights:
             </p>
             <div class="projects-grid">
                 <!-- Amplify Project -->
@@ -370,6 +370,9 @@
             <div class="modal-body">
                 <ul id="modal-bullets">
                 </ul>
+                <div id="modal-tech-stack" class="tech-stack"
+                    style="margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid #eaeaea;">
+                </div>
             </div>
         </div>
     </div>
